--- a/src/gui/Login.fxml
+++ b/src/gui/Login.fxml
@@ -17,7 +17,7 @@
             <Image url="@../assets/SignUpBackground.jpeg" />
          </image>
       </ImageView>
-      <AnchorPane fx:id="contentContainer" layoutX="338.0" layoutY="13.0" prefHeight="375.0" prefWidth="342.0" style="-fx-background-color: #ffc04d#ffc04d;">
+      <AnchorPane fx:id="contentContainer" layoutX="338.0" layoutY="13.0" prefHeight="375.0" prefWidth="342.0" style="-fx-background-color: #ffffff#ffffff;">
          <children>
             <TextField fx:id="EmailUser" layoutX="84.0" layoutY="163.0" prefHeight="26.0" prefWidth="243.0" promptText="Email" />
             <Label fx:id="label" layoutX="17.0" layoutY="180.0" text="Email" textFill="#f8f8f8" visible="false" />
@@ -27,9 +27,24 @@
                   <Font size="29.0" />
                </font>
             </Label>
-            <Button id="Login" fx:id="loginButton" layoutX="71.0" layoutY="319.0" mnemonicParsing="false" onAction="#login" prefHeight="35.0" prefWidth="211.0" style="-fx-background-color: #99F599#99F599;" text="Sign in" />
+            <Button id="Login" fx:id="loginButton" layoutX="71.0" layoutY="319.0" mnemonicParsing="false" onAction="#login" prefHeight="35.0" prefWidth="211.0" style="-fx-background-color: #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF;" text="Sign in" textFill="WHITE" />
             <Hyperlink fx:id="ForgotpwdButton" layoutX="102.0" layoutY="286.0" onAction="#Forgotpwd" text="Forgot your password ?" underline="true" />
             <PasswordField fx:id="PasswordUser" layoutX="86.0" layoutY="243.0" prefHeight="26.0" prefWidth="243.0" promptText="Password" />
+            <ImageView fitHeight="81.0" fitWidth="163.0" layoutX="143.0" layoutY="61.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/avatar.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="26.0" fitWidth="24.0" layoutX="31.0" layoutY="168.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/mail.png" />
+               </image>
+            </ImageView>
+            <ImageView fitHeight="24.0" fitWidth="24.0" layoutX="33.0" layoutY="244.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../assets/password.png" />
+               </image>
+            </ImageView>
          </children>
       </AnchorPane>
       <Label fx:id="labelContainer" layoutX="110.0" layoutY="14.0" prefHeight="61.0" prefWidth="280.0" text="Welcome to EFOOD " textFill="#1f424e">
@@ -42,7 +57,7 @@
             <Font name="System Bold" size="13.0" />
          </font>
       </Label>
-      <Button fx:id="SignUpButton" layoutX="196.0" layoutY="158.0" mnemonicParsing="false" onAction="#SignUp" prefHeight="35.0" prefWidth="109.0" style="-fx-background-color: #99F599#99F599;" text="Sign up" />
+      <Button fx:id="SignUpButton" layoutX="196.0" layoutY="158.0" mnemonicParsing="false" onAction="#SignUp" prefHeight="35.0" prefWidth="109.0" style="-fx-background-color: #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF #007FFF#007FFF;" text="Sign up" textFill="WHITE" />
       <Label fx:id="labelSignUp" layoutX="135.0" layoutY="99.0" text="Join our community by signing up!">
          <font>
             <Font name="System Bold" size="13.0" />
