--- a/src/Views/Commande.fxml
+++ b/src/Views/Commande.fxml
@@ -48,6 +48,11 @@
                                                 <Cursor fx:constant="HAND" />
                                             </cursor>
                                         </Region>
+                                        <Region fx:id="navStat" maxHeight="18.0" maxWidth="18.0" minHeight="18.0" minWidth="18.0" onMouseClicked="#showUserStat" opacity="0.75" prefHeight="18.0" prefWidth="18.0" style="-fx-background-color: #ffffff; -fx-scale-x: -1;">
+                                            <cursor>
+                                                <Cursor fx:constant="HAND" />
+                                            </cursor>
+                                        </Region>
                                     </children>
                                     <padding>
                                         <Insets top="20.0" />
